--- a/client/volunteering.css
+++ b/client/volunteering.css
@@ -65,7 +65,8 @@ body {
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
-    padding: 20px;
+    margin-bottom: 40px;
+    padding: 40px;
 }
 
 .events {
@@ -282,4 +283,8 @@ input[type=text]:focus {
     outline: none;
 }
 
-  
+@media screen and (max-width: 992px) {
+    .topBar {
+        height: 400px;
+    }
+}
